# iterqueue

./: README.md  pyproject.toml
iterqueue/: __init__.py  iterqueue.py  test_iterqueue.py
